{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 102,
  "lineage": "08bc3fdd-fdba-2ce7-7a03-49739612e732",
  "resources": [
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic1-terraform",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/c1a0505f1ad30de7",
            "arn_suffix": "app/example/c1a0505f1ad30de7",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-324150694.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/c1a0505f1ad30de7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090d9f7a83d0325f1",
              "sg-0b43223c05f9a4fda",
              "sg-0ccf3ffd0138d834d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029e83f49f76fc937"
              },
              {
                "subnet_id": "subnet-0d82ce271391d79b5"
              }
            ],
            "subnets": [
              "subnet-029e83f49f76fc937",
              "subnet-0d82ce271391d79b5"
            ],
            "vpc_id": "vpc-00321c894545a0d5f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/787fa4a39e520641",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTP』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/787fa4a39e520641",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/c1a0505f1ad30de7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_lb.example",
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/b5c452ef79f1e4d2",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:730054542356:certificate/d832e719-e028-4836-a594-8dbd1ee75fbb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTPS』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/b5c452ef79f1e4d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/c1a0505f1ad30de7",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_acm_certificate.example",
            "module.ecs.module.loadbalancer.aws_acm_certificate_validation.example",
            "module.ecs.module.loadbalancer.aws_lb.example",
            "module.ecs.module.loadbalancer.aws_route53_record.example",
            "module.ecs.module.loadbalancer.aws_route53_record.example_certificate",
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.data.aws_route53_zone.example",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/6401e6d4ca14cb69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/6401e6d4ca14cb69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/c1a0505f1ad30de7",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_lb.example",
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/12395f18156e0776",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/c1a0505f1ad30de7/b5c452ef79f1e4d2/e80f7e0643b0ccdc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/c1a0505f1ad30de7/b5c452ef79f1e4d2/e80f7e0643b0ccdc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/c1a0505f1ad30de7/b5c452ef79f1e4d2",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_acm_certificate.example",
            "module.ecs.module.loadbalancer.aws_acm_certificate_validation.example",
            "module.ecs.module.loadbalancer.aws_lb.example",
            "module.ecs.module.loadbalancer.aws_lb_listener.https",
            "module.ecs.module.loadbalancer.aws_lb_target_group.example",
            "module.ecs.module.loadbalancer.aws_route53_record.example",
            "module.ecs.module.loadbalancer.aws_route53_record.example_certificate",
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.data.aws_route53_zone.example",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/12395f18156e0776",
            "arn_suffix": "targetgroup/example/12395f18156e0776",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/12395f18156e0776",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.aws_lb.example",
            "module.ecs.module.loadbalancer.aws_s3_bucket.alb_log",
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0ccf3ffd0138d834d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccf3ffd0138d834d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http_redirect_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1386852737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ccf3ffd0138d834d",
            "security_group_rule_id": "sgr-021b7050172489ffe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-598889238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ccf3ffd0138d834d",
            "security_group_rule_id": "sgr-005e2779df60b259f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0b43223c05f9a4fda",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b43223c05f9a4fda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-730148813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b43223c05f9a4fda",
            "security_group_rule_id": "sgr-0f737cd98def10140",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3690579158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b43223c05f9a4fda",
            "security_group_rule_id": "sgr-0e69f3f2146d94b59",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-090d9f7a83d0325f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090d9f7a83d0325f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3087495922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-090d9f7a83d0325f1",
            "security_group_rule_id": "sgr-03d756fcda4869cac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-949177513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090d9f7a83d0325f1",
            "security_group_rule_id": "sgr-08ca373cd9bc5976d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0199b8477a0e49d90",
            "association_id": "eipassoc-0acb053bdb6b235f5",
            "domain": "vpc",
            "id": "eipalloc-0199b8477a0e49d90",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-042ec6c759092beee",
            "private_dns": "ip-10-0-0-47.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-3-112-76-232.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.76.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7e39ef17c3e5f2",
            "association_id": "eipassoc-051f939aee0d0d141",
            "domain": "vpc",
            "id": "eipalloc-08e7e39ef17c3e5f2",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-00985a88379a561ec",
            "private_dns": "ip-10-0-1-121.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.121",
            "public_dns": "ec2-35-72-165-176.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.165.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008731600dd0db2f1",
            "association_id": "eipassoc-00608b584d1ff1d3f",
            "domain": "vpc",
            "id": "eipalloc-008731600dd0db2f1",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0dc1db3dc270611fb",
            "private_dns": "ip-10-0-2-14.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.14",
            "public_dns": "ec2-35-77-172-52.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.77.172.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:internet-gateway/igw-09e0a2dcd71b91950",
            "id": "igw-09e0a2dcd71b91950",
            "owner_id": "730054542356",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0199b8477a0e49d90",
            "association_id": "eipassoc-0acb053bdb6b235f5",
            "connectivity_type": "public",
            "id": "nat-0288dfe4aedf28068",
            "network_interface_id": "eni-042ec6c759092beee",
            "private_ip": "10.0.0.47",
            "public_ip": "3.112.76.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b23a0f9399078d2"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7e39ef17c3e5f2",
            "association_id": "eipassoc-051f939aee0d0d141",
            "connectivity_type": "public",
            "id": "nat-01ccdb487d97261b1",
            "network_interface_id": "eni-00985a88379a561ec",
            "private_ip": "10.0.1.121",
            "public_ip": "35.72.165.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d82ce271391d79b5"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008731600dd0db2f1",
            "association_id": "eipassoc-00608b584d1ff1d3f",
            "connectivity_type": "public",
            "id": "nat-0a5c175e4680e32e4",
            "network_interface_id": "eni-0dc1db3dc270611fb",
            "private_ip": "10.0.2.14",
            "public_ip": "35.77.172.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029e83f49f76fc937"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050bdf6caaad0e48f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0288dfe4aedf28068",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050bdf6caaad0e48f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_nat_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cdc096a57029208c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ccdb487d97261b1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cdc096a57029208c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_nat_gateway.nat_gateway_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e47089d6ebbff89c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a5c175e4680e32e4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e47089d6ebbff89c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_eip.nat_gateway_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_nat_gateway.nat_gateway_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e0a2dcd71b91950",
            "id": "r-rtb-096b691b0a71b199f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096b691b0a71b199f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-050bdf6caaad0e48f",
            "id": "rtb-050bdf6caaad0e48f",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0288dfe4aedf28068",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0cdc096a57029208c",
            "id": "rtb-0cdc096a57029208c",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ccdb487d97261b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0e47089d6ebbff89c",
            "id": "rtb-0e47089d6ebbff89c",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5c175e4680e32e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-096b691b0a71b199f",
            "id": "rtb-096b691b0a71b199f",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e0a2dcd71b91950",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08942d4df93ef2aba",
            "route_table_id": "rtb-050bdf6caaad0e48f",
            "subnet_id": "subnet-042f0ede1dfa3d6cc"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.private",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6572cc8ca610637",
            "route_table_id": "rtb-0cdc096a57029208c",
            "subnet_id": "subnet-07b9342535066d887"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.private_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1d76053c000b13a",
            "route_table_id": "rtb-0e47089d6ebbff89c",
            "subnet_id": "subnet-097b560bf555182fe"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.private_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.private_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545c015bdf3b068a",
            "route_table_id": "rtb-096b691b0a71b199f",
            "subnet_id": "subnet-02b23a0f9399078d2"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095810e4a9e91149d",
            "route_table_id": "rtb-096b691b0a71b199f",
            "subnet_id": "subnet-0d82ce271391d79b5"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0634b2fa610c4a703",
            "route_table_id": "rtb-096b691b0a71b199f",
            "subnet_id": "subnet-029e83f49f76fc937"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_route_table.public",
            "module.ecs.module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0470d2380c9a81712",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0470d2380c9a81712",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-325044781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0470d2380c9a81712",
            "security_group_rule_id": "sgr-0712bf9f3203cac6c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_security_group.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-725984265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0470d2380c9a81712",
            "security_group_rule_id": "sgr-02623593be53a2420",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_security_group.example",
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-042f0ede1dfa3d6cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042f0ede1dfa3d6cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-07b9342535066d887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b9342535066d887",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-097b560bf555182fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097b560bf555182fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-02b23a0f9399078d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b23a0f9399078d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0d82ce271391d79b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d82ce271391d79b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-029e83f49f76fc937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e83f49f76fc937",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:vpc/vpc-00321c894545a0d5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cf88bd38e464bf9",
            "default_route_table_id": "rtb-03f85d44eace1b3d3",
            "default_security_group_id": "sg-0f3dc2285578cb944",
            "dhcp_options_id": "dopt-0bd073aa1be1e27c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00321c894545a0d5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f85d44eace1b3d3",
            "owner_id": "730054542356",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0c0642fe089f510e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0642fe089f510e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2786067258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c0642fe089f510e6",
            "security_group_rule_id": "sgr-04bad92b7832076e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example",
            "module.ecs.module.loadbalancer.module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-580352446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c0642fe089f510e6",
            "security_group_rule_id": "sgr-0e7427aa86b2c7922",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example",
            "module.ecs.module.loadbalancer.module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0635059cbe4d5f3ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0635059cbe4d5f3ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00321c894545a0d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1557706607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0635059cbe4d5f3ff",
            "security_group_rule_id": "sgr-09cc293c0377d8bef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example",
            "module.ecs.module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1606902715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0635059cbe4d5f3ff",
            "security_group_rule_id": "sgr-0c778a90d85e0b267",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.loadbalancer.module.vpc.aws_vpc.example",
            "module.ecs.module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}